<resources>
    <string name="app_name" translatable="false">MovieApp</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="surprise_me">Surprise me</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="search_bar_hint">Movies, TV series, person</string>
    <string name="title_not_found">Title not found</string>
    <string name="poster">Poster</string>
    <string name="all_movies">All</string>
    <string name="show_all">Show all</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="download">Download</string>
    <string name="share">Share To:</string>
    <string name="text_for_share">
        Found the interesting movie on MovieApp:\n
        🎬\"%1$s\"\n
        ⭐%2$.1f/10\n
        📝%3$s
    </string>
    <string name="functionality_will_be_added_later">The functionality will be added later</string>
    <string name="movie_added_to_favorites">Movie added to favorites</string>
    <string name="movie_removed_from_favorites">Movie removed from favorites</string>
    <string name="double_tap_for_exit">Double tap for exit</string>
    <string name="runtime">%1$d min</string>
    <string name="tmdb_vote" translatable="false">TMDb: %1$.1f</string>
    <string name="unknown_country">Unknown country</string>
    <string name="application_theme">Application theme</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_ui">No internet connection. Please check your connection and try again.</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="movie_not_found_ui">We couldn\'t find this movie. Try searching for another title or refresh the screen.</string>
    <string name="request_limit">Request limit exceeded or insufficient permissions</string>
    <string name="request_limit_ui">Too many requests now. Please wait a moment and try again.</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="server_connection_error_ui">We couldn\'t connect to the server. Please try again.</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="unexpected_error_ui">Something went wrong. Please try again.</string>
    <string name="download_movie_error">Download movie error</string>
    <string name="try_again">Try again</string>
    <string name="save_movie_error">Save movie error</string>
    <string name="download_is_success">Download is success</string>
    <string name="open">Open</string>
    <string name="permission_is_required_for_download_movie">Permission is required for download movie</string>
</resources>