<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_bookmarks"
        android:title="@string/favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/randomFragment"
        android:icon="@drawable/ic_dice"
        android:title="@string/surprise_me"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />



</menu>